replace pages with users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,15 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <%= link_to 'Clear Sky', root_path, class: 'navbar-brand' %>
-
     <% if signed_in? %>
       Signed in as: <%= current_user.email %>
       <%= button_to 'Sign out', sign_out_path, method: :delete %>
     <% else %>
       <%= link_to 'Sign in', sign_in_path %>
     <% end %>
+    <br>
+
+    <%= link_to 'My referral link', root_path, class: 'navbar-brand' %>
 
     <div id="flash">
       <% flash.each do |key, value| %>
