--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,4 @@
 <h1>Welcome user!</h1>
 Your referral link is <%= @referral_link %>. Share it with others!
+Referral link you can share with friends: <%= @refer_token %>
+Number of friends referred: <%= @referral_count %>
