--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
 <h1>Welcome user!</h1>
-Your referral link is <%= @referral_link %>. Share it with others!
-Referral link you can share with friends: <%= @refer_token %>
-Number of friends referred: <%= @referral_count %>
+Your referral link is <%= "http://localhost:3000/sign_up/?referToken=" + URI.escape(current_user.email) %>. Share it with others!
+Number of friends referred: <%= current_user.referrals.count %>
