--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome user!</h1>
-Your referral link is <%= "http://localhost:3000/sign_up/?referToken=" + URI.escape(current_user.email) %>. Share it with others!
+Your referral link is <%= current_user.referral_link %>. Share it with others!
 Number of friends referred: <%= current_user.referrals.count %>
