--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
-<h1>Welcome user!</h1>
-Your referral link is <%= current_user.referral_link %>. Share it with others!
-Number of friends referred: <%= current_user.referrals.count %>
+<h1>Welcome!</h1>
+<div>Your referral link is <%= current_user.referral_link %>. Share it with others!</div>
+<div>Number of friends referred: <%= current_user.referrals.count %></div>
