--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome!</h1>
-<div>Your referral link is <%= current_user.referral_link %>. Share it with others!</div>
+<div>Here is your referral link: <%= request.base_url %>/sign_up?refer_code=<%= current_user.referral_code %></div>
+<div>Share it with others!</div>
 <div>Number of friends referred: <%= current_user.referrals.count %></div>
